# LypoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
LypoEngine/src/: lypch.h
LypoEngine/src/core/: console_log.h  window.h
LypoEngine/src/core/rendering/: BufferUtils.h  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  shader.h
LypoEngine/src/core/window/: window.h  window_factory.cpp  window_factory.h
LypoEngine/src/platform/linux/: linux_console_logger.cpp  linux_window.cpp  linux_window.h  main.cpp
LypoEngine/src/platform/macos/: main.cpp
LypoEngine/src/platform/opengl/: GLCheck.h  OpenGlIndexBuffer.cpp  OpenGlIndexBuffer.hpp  OpenGlVertexArray.cpp  OpenGlVertexArray.hpp  OpenGlVertexBuffer.cpp  OpenGlVertexBuffer.hpp  opengl_shader.cpp  opengl_shader.h
LypoEngine/src/platform/windows/: main.cpp  windows_console_logger.cpp  windows_window.cpp  windows_window.h
LypoSandbox/: main.cpp
LypoSandbox/assets/: default.fragment.glsl  default.vertex.glsl
